[gd_scene load_steps=11 format=3 uid="uid://b6631ppy0o6he"]

[ext_resource type="Script" uid="uid://dy1lil83b5rec" path="res://maps/main_menu.gd" id="1_km1yj"]
[ext_resource type="PackedScene" uid="uid://b7uu2lftx65gd" path="res://maps/map_scenes/main_menu_scene.tscn" id="2_km1yj"]
[ext_resource type="FontFile" uid="uid://dq56halmbok75" path="res://fonts/dharma-punk/Dharma Punk.ttf" id="3_km1yj"]
[ext_resource type="FontFile" uid="uid://16src0y42sdt" path="res://fonts/dharma-punk/Dharma Punk 2.ttf" id="4_bneil"]

[sub_resource type="LabelSettings" id="LabelSettings_rlf6c"]
font = ExtResource("3_km1yj")
font_size = 116
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bneil"]
font = ExtResource("3_km1yj")
font_size = 22
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kshxf"]
font = ExtResource("4_bneil")
font_size = 85
font_color = Color(1, 0.24275124, 0.19736892, 1)

[sub_resource type="Animation" id="Animation_bneil"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sp_maps_list:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-200, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sp_maps_list/back:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75.435, 616)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("buttons/sp_button:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_km1yj"]
resource_name = "sp_map_list_show"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sp_maps_list:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 1.2),
"transitions": PackedFloat32Array(1.681793, 1),
"update": 0,
"values": [Vector2(-200, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("buttons:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.19999993, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-200, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sp_maps_list/back:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(195, 663.05), Vector2(195, 616)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("buttons/sp_button:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.19999999),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707963267948966]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kshxf"]
_data = {
&"RESET": SubResource("Animation_bneil"),
&"sp_map_list_show": SubResource("Animation_km1yj")
}

[node name="main_menu" type="Node3D" node_paths=PackedStringArray("maps_button_container", "animation_player", "main_menu_scene")]
script = ExtResource("1_km1yj")
maps_button_container = NodePath("CanvasLayer/sp_maps_list/ScrollContainer")
animation_player = NodePath("CanvasLayer/AnimationPlayer")
main_menu_scene = NodePath("main_menu")

[node name="main_menu" parent="." instance=ExtResource("2_km1yj")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1154.0
offset_bottom = 649.0

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 734.0
offset_top = 354.0
offset_right = 1095.0
offset_bottom = 485.0
text = "Naloxone"
label_settings = SubResource("LabelSettings_rlf6c")

[node name="buttons" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="sp_button" type="Button" parent="CanvasLayer/buttons"]
layout_mode = 0
offset_left = 27.0
offset_top = 382.0
offset_right = 246.0
offset_bottom = 436.0
text = "single player                         |
                                               
"

[node name="Label" type="Label" parent="CanvasLayer/buttons/sp_button"]
layout_mode = 0
offset_left = 5.0
offset_top = 25.0
offset_right = 333.0
offset_bottom = 65.0
text = "they might as well be dead..."
label_settings = SubResource("LabelSettings_bneil")

[node name="sp_maps_list" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -200.0
offset_bottom = 647.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/sp_maps_list"]
layout_mode = 0
offset_right = 195.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.40784314)

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/sp_maps_list"]
layout_mode = 0
offset_right = 197.0
offset_bottom = 651.0
draw_focus_border = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="map_list" type="Control" parent="CanvasLayer/sp_maps_list/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/sp_maps_list/ScrollContainer/map_list"]
layout_mode = 0
offset_left = 203.185
offset_top = -4.0
offset_right = 1156.1843
offset_bottom = 92.0
rotation = 1.5707964
text = "the world at its finest."
label_settings = SubResource("LabelSettings_kshxf")

[node name="back" type="Button" parent="CanvasLayer/sp_maps_list"]
layout_mode = 0
offset_left = 75.435
offset_top = 616.0
offset_right = 173.43488
offset_bottom = 648.0
text = "<-- go back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_kshxf")
}

[connection signal="pressed" from="CanvasLayer/buttons/sp_button" to="." method="_on_sp_button_pressed"]
[connection signal="pressed" from="CanvasLayer/sp_maps_list/back" to="." method="_on_back_pressed"]
